--- a/Erp8/PhoneBook/PhoneBookUI/Views/Home/Index.cshtml
+++ b/Erp8/PhoneBook/PhoneBookUI/Views/Home/Index.cshtml
@@ -1,6 +1,17 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+TempData["AddPhoneSuccessMsg"]
+
+@if (TempData["AddPhoneSuccessMsg"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @* <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill" /></svg>*@
+        <i class="bi bi-check-circle-fill"></i>
+        @TempData["AddPhoneSuccessMsg"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
 <div>
     <a class="bt btn-primary" asp-controller="Home" asp-action="AddPhone">
