--- a/Erp8/PhoneBook/PhoneBookUI/Views/Home/Index.cshtml
+++ b/Erp8/PhoneBook/PhoneBookUI/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@model ICollection<MemberPhoneViewModel>
+@{
     ViewData["Title"] = "Home Page";
 }
-TempData["AddPhoneSuccessMsg"]
+
 
 @if (TempData["AddPhoneSuccessMsg"] != null)
 {
@@ -18,4 +19,53 @@ TempData["AddPhoneSuccessMsg"]
         Yeni Telefon Ekle
     </a>
 
+</div> <br />
+
+<div class="row">
+    @if (Context.User.Identity?.Name == null)
+    {
+        <p>Buraya resim ya da içeriğe dair tasarım gelecektir</p>        
+    }
+    else if (Model.Count == 0)
+    {
+        <h4>Rehberimizde henüz kimse yoktur. Yeni numara eklediğimizde burada listelenecektir.</h4>        
+    }else
+    {
+        int counter = 0;
+        <table class="table table-hover table-bordered0" id="phoneTable">
+            <thead>
+                <tr>
+                    <th>Sıra No</th>
+                    <th>Eklendiği Tarih</th>
+                    <th>Kategori</th>
+                    <th>İsim Soyisim</th>
+                    <th>Telefon</th>
+                    <th>İşlemler</th>                    
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td><b>@(counter+=1)</b></td>
+                        <td>@item.CreatedDate.ToString("dd/MM/yyyy")</td>
+                        <td>@item.PhoneType.Name</td>
+                        <td>@item.FriendNameSurname</td>
+                        <td>@item.Phone</td>
+                        <td>
+                            <a class="btn btn-primary btn-sm"  href="/Home/EditPhone/@item.Id">Düzenle</a>
+                            <a class="btn btn-primary btn-sm" asp-controller="Home" asp-action="DeletePhone"
+                            asp-route-id="@item.Id">Sil</a>
+
+                            <a class="btn btn-info btn-sm" onclick="deletePhone(@item.Id)"> AJAX ile Sil</a> 
+
+                        </td>
+                        
+                    </tr>
+                }
+
+            </tbody>
+
+        </table>
+    }
 </div>
