--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Shared/Components/AdminLeftMenu/Default.cshtml
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Shared/Components/AdminLeftMenu/Default.cshtml
@@ -8,7 +8,8 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
-            <li class="nav-item has-treeview ">
+            <li class="nav-header">Genel İşlemler</li>
+            <li class="nav-item has-treeview">
                 <a href="#" class="nav-link" style="background-color:lightgray; color:black">
                     <i class="nav-icon fas fa-user"></i>
                     <p>
@@ -33,7 +34,7 @@
                 </ul>
             </li>
 
-            <li class="nav-item has-treeview ">
+            <li class="nav-item has-treeview">
                 <a href="#" class="nav-link" style="background-color:lightgray; color:black">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
@@ -58,7 +59,7 @@
                 </ul>
             </li>
 
-            <li class="nav-item has-treeview ">
+            <li class="nav-item has-treeview">
                 <a href="#" class="nav-link" style="background-color:lightgray; color:black">
                     <i class="nav-icon far fa-address-card"></i>
                     <p>
@@ -85,11 +86,10 @@
 
             <li class="nav-header">Hesap Ayarları</li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon far fa-circle text-danger"></i>
+                <a href="#" class="nav-link" style="background-color:lightgray; color:black">
+                    <i class="fas fa-sign-in-alt nav-icon"></i>
                     <p>Giriş Yap</p>
-                    <i class="right fas fa-sign-in-alt"></i>
-
+                    
                 </a>
             </li>
         </ul>
