--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -86,5 +86,6 @@
 
     <!-- PAGE SCRIPTS -->
     <script src="~/AdminLTE/dist/js/pages/dashboard2.js"></script>
+    @await RenderSectionAsync("Scripts",required:false)
 </body>
 </html>
