--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Home/MemberIndex.cshtml
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/Home/MemberIndex.cshtml
@@ -4,7 +4,16 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Sistemdeki Tüm Üyeler</h1>
+@if (TempData["MemberEditSuccessMsg"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @*<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill" /></svg>*@
+        @TempData["MemberEditSuccessMsg"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+<h3>Sistemdeki Tüm Üyeler</h3>
 
 <!-- USERS LIST -->
 <div class="card">
@@ -16,41 +25,73 @@
             <button type="button" class="btn btn-tool" data-card-widget="collapse">
                 <i class="fas fa-minus"></i>
             </button>
+            <button type="button" class="btn btn-tool" data-card-widget="remove">
+                <i class="fas fa-times"></i>
+            </button>
         </div>
     </div>
     <!-- /.card-header -->
     <div class="card-body p-0">
-        <ul class="users-list clearfix">
+        <ul class="users-list clearfix" id="uyeList">
             @foreach (var item in Model)
             {
                 <li>
-                    <img src="~/AdminLTE/dist/img/user1-128x128.jpg" alt="User Image">
-                    <a class="users-list-name" href="/admin/MemberEdit/@item.Email" style="font-weight:bold;">@item.Name @item.Surname.ToUpper()</a>
-                    <span class="users-list-date text-danger" >
-                        @{
-                            TimeSpan span = new TimeSpan();
-                            span = DateTime.Now - item.CreatedDate;
-                            var days = Convert.ToInt32(span.TotalDays);
-                            string result = string.Empty;
-                            if (days == 0)
+                    <a href="/admin/duzenle?id=@item.Email">
+                        @if (item.Picture == null)
+                        {
+                            if (item.Gender == 1) //kadın
                             {
-                                result = "Yeni Üye";
+                                <img src="~/MemberPictures/anonimKadin.jpg"
+                                     alt="User Image">
+
                             }
                             else
                             {
-                                result = $"{days} Gündür Üye ";
+                                <img src="~/MemberPictures/anonimErkek.jpg"
+                                     alt="User Image">
                             }
-                        } @result  gündür üye
-                        
+
+                        }
+                        else
+                        {
+                            <img src="@item.Picture" alt="User Image">
+
+                        }
+
+
+                        <br />
+                        <span style="font-weight:bold;color:black;">
+                            @item.Name @item.Surname.ToUpper()
                         </span>
+                        <span class="users-list-date text-danger">
+                            @{
+
+                                TimeSpan span = new TimeSpan();
+                                span = DateTime.Now - item.CreatedDate;
+                                var days = Convert.ToInt32(span.TotalDays);
+                                string result = string.Empty;
+                                if (days == 0)
+                                {
+                                    result = "Yeni Üye";
+                                }
+                                else
+                                {
+                                    result = $"{days} Gündür Üye";
+                                }
+                            } @result
+                        </span>
+                    </a>
                 </li>
             }
-
-
         </ul>
         <!-- /.users-list -->
     </div>
-    <!-- /.card-body -->  
-   
+    <!-- /.card-body -->
 </div>
 <!--/.card -->
+@section PageCss{
+    #uyeList li img{
+        width:160px !important;
+        height:160px !important;
+    }
+}
