--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -11,4 +11,4 @@ Böylece her sayfada using kullanmak zorunda kalmazsınız.*@
 asp-for asp-action asp-controller vb. şeklindeki 
 MVC Core ile gelen TAGHELPER'ları kullanabilmemiz için @addTagHelper'ı burada tanımlıyoruz*@
 
-@addTagHelper *, Microsoft.AspnetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
