--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Views/Account/Login.cshtml
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookUI/Views/Account/Login.cshtml
@@ -45,7 +45,7 @@
             <button type="submit" class="btn btn-info">
                 GİRİŞ YAP
             </button>
-            <a class=" btn btn-danger">KAYIT OL</a>
+            <a asp-controller="Account" asp-action="Register" class="btn btn-danger">KAYIT OL</a>
         </div> <br />
 
     </form>
